# termaid

./: .gitattributes  .gitignore  CHANGES.md  NOTICE  README.md  dune-project  termaid.opam  termaid.opam.template
.github/workflows/: ci.yml  upstream-check.yml
examples/: demo.ml  dune
lib/: canvas.ml  const.ml  dune  fallback.ml  ir.ml  layout.ml  parse_class.ml  parse_graph.ml  parse_sequence.ml  parse_state.ml  rank.ml  render.ml  seq_layout.ml  style.ml  termaid.ml  termaid.mli  text.ml  ucore.ml  util.ml  vec.ml  wrap.ml
oracle/: Cargo.toml  README.md  UPSTREAM
oracle/ratatui/: Cargo.toml
oracle/ratatui/src/: lib.rs
oracle/src/: main.rs
scripts/: check_upstream.sh  gen_golden.sh
test/: dune  test_golden.ml  test_invariants.ml
test/golden/: class_annotation.expected  class_annotation.mmd  class_basic.expected  class_basic.mmd  class_cardinality.expected  class_cardinality.mmd  class_generics.expected  class_generics.mmd  class_relations.expected  class_relations.mmd  er_attrs.expected  er_attrs.mmd  er_basic.expected  er_basic.mmd  fallback_gantt.expected  fallback_gantt.mmd  flowchart_bt_chain.expected  flowchart_bt_chain.mmd  flowchart_lr_labels.expected  flowchart_lr_labels.mmd  flowchart_lr_two_nodes.expected  flowchart_rl_chain.expected  flowchart_rl_chain.mmd  flowchart_subgraph.expected  flowchart_subgraph.mmd  flowchart_td_diamond.expected  flowchart_td_diamond.mmd  graph_arrowheads.expected  graph_arrowheads.mmd  graph_circle_cross.expected  graph_circle_cross.mmd  graph_cycle.expected  graph_cycle.mmd  graph_long_wrap.expected  graph_long_wrap.mmd  graph_lr_bidir.expected  graph_lr_bidir.mmd  graph_lr_diamond.expected  graph_lr_diamond.mmd  graph_self_loop.expected  (+88 more)
